--- a/ref.bib
+++ b/ref.bib
@@ -23,3 +23,10 @@
   owner = {mhha},
   timestamp = {2013.01.13}
 }
+
+@BOOK{Nayfeh95,
+  title = {Applied Nonlinear Dynamics},
+  publisher = {Wiley},
+  year = {1995},
+  author = {A. H. Nayfeh and B. Balachandran}
+}
