--- a/report.tex
+++ b/report.tex
@@ -39,7 +39,7 @@ open=any             % New chapter may begin on any page
     \tableofcontents
 %    \include{summary}
     \include{description}
-%       \include{tuning}
+    \include{test}
     \include{bibliography}
     \include{appendix}
 %    \include{acknowledgements}
